Still working on login/signup. Taking break because signup won't work

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,6 +12,8 @@
 
     <button type="submit">Login</button>
 </form>
+{{!-- Can't get the button to load the signup route --}}
+    <button type="submit" href="/signup">Sign up instead</button> 
 
 {{#if loginError}}
     <p style="color: red;">{{loginError}}</p>
