Login and Signup working. "/" route doesnt bring up main handlebars

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -10,7 +10,7 @@
     <label for="password-signup">Password:</label>
     <input type="password" id="password-signup" required>
 
-    <button type="submit">signup</button>
+    <button type="submit">Signup</button>
 </form>
 
 {{#if signupError}}
