--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,9 +11,11 @@
     <input type="password" id="password-login" required>
 
     <button type="submit">Login</button>
+
+    <a href="/signup" class="signup-link">
+    <button type="button">Signup</button>
+  </a>
 </form>
-{{!-- Can't get the button to load the signup route --}}
-    <button type="submit" href="/signup">Sign up instead</button> 
 
 {{#if loginError}}
     <p style="color: red;">{{loginError}}</p>
